--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"scripts":{"start":"nodemon app"},"dependencies":{"argon2":"^0.29.1","cookie-parser":"^1.4.6","cors":"^2.8.5","express":"^4.18.1","jsonwebtoken":"^8.5.1","multer":"^1.4.5-lts.1","mysql2":"^2.3.3"},"devDependencies":{"nodemon":"^2.0.20"}}
+{"scripts":{"start":"nodemon app"},"dependencies":{"argon2":"^0.29.1","cookie-parser":"^1.4.6","cors":"^2.8.5","express":"^4.18.1","g":"^2.0.1","jsonwebtoken":"^8.5.1","multer":"^1.4.5-lts.1","mysql2":"^2.3.3","pm2":"^5.2.2"},"devDependencies":{"nodemon":"^2.0.20"}}
